welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:4: error: not found: value compteur
  compteur=0
  ^hasTeen:6: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:8: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:10: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:11: error: not found: value compteur
  if (compteur >= 2) {
      ^