welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
  
  
  compteur=0
  if (estAdo(a)==true) {
    compteur=compteur+1}
  if (estAdo(b)==true) {
    compteur=compteur+1}
  if (estAdo(c)==true) {
    compteur=compteur+1}
  if (compteur >= 2) {
    return true 
  } else return false
}

def estAdo(d:Int): Boolean =  {
   if (d>=13 & d<=19){
     return true
   } else return false 
}
  